++html structure, FIX overflow, praise the gods

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,8 +16,8 @@ body p {
   color:#999;
 }
 
-body {
-  width: 100%;
+html, body {
+  /*width: 100%;*/
   /*overflow: hidden;*/
   overflow-x: hidden;
 }
